# Technopark-Highload

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  go.mod  go.sum  main.go
files/: dashboard.json  docker-compose.yaml  metrics.yaml  nginx.conf  prometheus.yaml  static_server.conf
src/: CMakeLists.txt  config.cc  config.h  file_store.cc  file_store.h  main.cc  network.cc  network.h  server.cc  server.h  utils.cc  utils.h
